<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.hybris.hyeclipse</groupId>
	<artifactId>com.hybris.hyeclipse.parent</artifactId>
	<version>22.9.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>SAP Commerce Cloud - Eclipse plugin (parent)</name>

	<developers>
		<developer>
			<email>pawel.wolanski@sap.com</email>
			<name>Pawel Wolanski</name>
			<organization>SAP SE</organization>
			<timezone>CET</timezone>
		</developer>
	</developers>

	<properties>
		<tycho-version>5.0.0</tycho-version>

		<!-- PROJECT SETTINGS -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- sonar properties -->
		<sonar.projectKey>hybris-commerce-eclipse-plugin</sonar.projectKey>
		<sonar.organization>sap-1</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
		<sonar.java.source>21</sonar.java.source>
	</properties>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<scm>
		<connection>https://github.com/SAP/hybris-commerce-eclipse-plugin.git</connection>
		<tag>HEAD</tag>
		<url>https://github.com/SAP/hybris-commerce-eclipse-plugin</url>
	</scm>

	<issueManagement>
		<url>https://github.com/SAP/hybris-commerce-eclipse-plugin/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<modules>
		<module>com.hybris.hyeclipse.commons</module>
		<module>com.hybris.hyeclipse.hac</module>
		<module>com.hybris.hyeclipse.impexed</module>
		<module>com.hybris.hyeclipse.importer</module>
		<module>com.hybris.hyeclipse.site</module>
		<module>com.hybris.hyeclipse.feature</module>
		<module>com.hybris.hyeclipse.ytypesystem</module>
		<module>com.hybris.hyeclipse.platform</module>
		<module>com.hybris.hyeclipse.tsv</module>
		<module>com.hybris.hyeclipse.tsv.extended</module>
		<module>com.hybris.hyeclipse.emf.beans</module>
		<module>com.hybris.hyeclipse.emf.beans.edit</module>
		<module>com.hybris.hyeclipse.emf.beans.editor</module>
		<module>com.hybris.hyeclipse.extgen</module>
		<module>com.hybris.hyeclipse.junit</module>
		<module>com.hybris.hyeclipse.tests</module>
	</modules>

	<repositories>
		<repository>
			<id>2024-09</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/releases/2024-09</url>
		</repository>

	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>5.2.0.4988</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.0</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>aarch64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
